--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
         <title>Portfolio</title>
     </head>
     <body>
-        <h1>Portfolio</h1>
+        <header>
+            <h1>Portfolio</h1>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+                <li>
+                    <a href="#">Contacts</a>
+                </li>
+            </ul>
+
+        </header>
+       
     </body>
 </html>
