--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             </ul>
 
         </header>
+        <main>
+            <section>
+                <h1>Introduction</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ipsa, odit corrupti quos, facilis molestias beatae quas excepturi neque debitis magni exercitationem nemo nostrum? Explicabo non at est perspiciatis quas?</p>
+            </section>
+        </main>
        
     </body>
 </html>
