footer has been added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ipsa, odit corrupti quos, facilis molestias beatae quas excepturi neque debitis magni exercitationem nemo nostrum? Explicabo non at est perspiciatis quas?</p>
             </section>
         </main>
+        <footer>
+            <div>
+                <p>Copyright &copy; 2021</p>
+            </div>
+        </footer>
        
     </body>
 </html>
